--- a/Example8/.project
+++ b/Example8/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Example8</name>
+	<name>WordsOperations</name>
 	<comment></comment>
 	<projects>
 	</projects>
